# magnetic_tape

./: CMakeLists.txt  README.md  res
config/: CMakeLists.txt  prog_config_parse.hpp  tape_config.conf  tape_config_parse.hpp
magnetic_tape/: CMakeLists.txt  main.cpp
magnetic_tape/include/: config.hpp  itape.hpp  tape.hpp  tape_sort.hpp  utils.hpp
magnetic_tape/include/tape/: itape.hpp  tape.hpp
output_tapes/: res
tests/: CMakeLists.txt
tests/end_to_end_tests/: e2e_tests.py  test_generator.py
tests/unit_tests/: tape_unit_tests.hpp  unit_tests.hpp
tmp_tapes/: 1  10  100  1000  1001  1002  1003  1004  1005  1006  1007  1008  1009  101  1010  1011  1012  1013  1014  1015  102  103  104  105  106  107  108  109  11  110  111  112  113  114  115  116  117  118  119  12  (+975 more)
